@@ -1,20 +1,9 @@
 package org.homio.app.rest;
 
-import static org.homio.app.rest.widget.EvaluateDatesAndValues.convertValuesToFloat;
-
 import com.fathzer.soft.javaluator.Constant;
 import com.fathzer.soft.javaluator.DoubleEvaluator;
 import com.fathzer.soft.javaluator.Operator;
 import com.fathzer.soft.javaluator.Parameters;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.TimeUnit;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.Setter;
@@ -42,12 +31,18 @@ import org.homio.app.rest.widget.EvaluateDatesAndValues;
 import org.homio.app.rest.widget.WidgetChartsController;
 import org.homio.app.rest.widget.WidgetChartsController.TimeSeriesChartData;
 import org.json.JSONObject;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.*;
+import java.util.concurrent.TimeUnit;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
+import static org.homio.api.ContextVar.GROUP_BROADCAST;
+import static org.homio.api.util.Constants.ROLE_ADMIN_AUTHORIZE;
+import static org.homio.app.rest.widget.EvaluateDatesAndValues.convertValuesToFloat;
 
 @Log4j2
 @RestController
@@ -64,7 +59,7 @@ public class VariableController {
         for (com.fathzer.soft.javaluator.Function function : defaultParameters.getFunctions()) {
             if (function.getMinimumArgumentCount() != function.getMaximumArgumentCount()) {
                 functions.add(OptionModel.of(function.getName(),
-                    function.getName() + "(%s..%s)".formatted(function.getMinimumArgumentCount(), function.getMaximumArgumentCount())));
+                        function.getName() + "(%s..%s)".formatted(function.getMinimumArgumentCount(), function.getMaximumArgumentCount())));
             } else {
                 functions.add(OptionModel.of(function.getName(), function.getName() + "(%s)".formatted(function.getMaximumArgumentCount())));
             }
@@ -92,15 +87,16 @@ public class VariableController {
     }
 
     @PostMapping("/{group}/transform")
+    @PreAuthorize(ROLE_ADMIN_AUTHORIZE)
     public void createTransformVariable(@PathVariable("group") String group, @RequestBody TransformVarRequest request) {
         context.var().createTransformVariable(group, null, request.name, VariableType.Float,
-            builder -> builder
-                .setTransformCode(request.getCode())
-                .setSourceVariables(request.getSources() == null ? List.of() : request.getSources())
-                .setIcon(new Icon(request.getIcon(), request.getIconColor()))
-                .setDescription(request.getDescription())
-                .setPersistent(request.isBackup())
-                .setQuota(request.getQuota())
+                builder -> builder
+                        .setTransformCode(request.getCode())
+                        .setSourceVariables(request.getSources() == null ? List.of() : request.getSources())
+                        .setIcon(new Icon(request.getIcon(), request.getIconColor()))
+                        .setDescription(request.getDescription())
+                        .setPersistent(request.isBackup())
+                        .setQuota(request.getQuota())
         );
     }
 
@@ -113,13 +109,13 @@ public class VariableController {
     @GetMapping("/options")
     public List<OptionModel> getWorkspaceVariableValues() {
         return context.toOptionModels(getAllVariables(s ->
-            !s.startsWith(WorkspaceGroup.PREFIX + "broadcasts")));
+                !s.startsWith(WorkspaceGroup.PREFIX + GROUP_BROADCAST)));
     }
 
     @GetMapping("/broadcasts")
     public List<OptionModel> getWorkspaceVariableBroadcastsValues() {
         return context.toOptionModels(getAllVariables(s ->
-            s.startsWith(WorkspaceGroup.PREFIX + "broadcasts")));
+                s.startsWith(WorkspaceGroup.PREFIX + GROUP_BROADCAST)));
     }
 
     @GetMapping("/{type}")
@@ -139,7 +135,7 @@ public class VariableController {
     public WidgetChartsController.TimeSeriesChartData<ChartDataset> getSourceChart(@RequestBody SourceHistoryChartRequest request) {
         SelectionSource selection = DataSourceUtil.getSelection(request.dataSource);
         HasTimeValueSeries source = selection.getValue(context);
-        if(request.minutes == -1) {
+        if (request.minutes == -1) {
             return getSourceChartSnapshot(source, request);
         }
 
@@ -164,15 +160,15 @@ public class VariableController {
         periodRequest.setForward(request.forward);
         periodRequest.setSortAsc(sortAsc);
 
-            val timeSeries = source.getMultipleTimeValueSeries(periodRequest);
-            List<Object[]> rawValues = timeSeries.values().iterator().next();
+        val timeSeries = source.getMultipleTimeValueSeries(periodRequest);
+        List<Object[]> rawValues = timeSeries.values().iterator().next();
 
-            if (!timeSeries.isEmpty()) {
-                ChartDataset dataset = new ChartDataset(null, null);
-                chartData.setTimestamp(rawValues.stream().map(objects -> (long) objects[0]).collect(Collectors.toList()));
-                dataset.setData(rawValues.stream().map(objects -> (float) objects[1]).toList());
-                chartData.getDatasets().add(dataset);
-            }
+        if (!timeSeries.isEmpty()) {
+            ChartDataset dataset = new ChartDataset(null, null);
+            chartData.setTimestamp(rawValues.stream().map(objects -> (long) objects[0]).collect(Collectors.toList()));
+            dataset.setData(rawValues.stream().map(objects -> (float) objects[1]).toList());
+            chartData.getDatasets().add(dataset);
+        }
         return chartData;
     }
 
@@ -201,8 +197,8 @@ public class VariableController {
             long min = minMax.getLeft(), max = minMax.getRight();
             long delta = (max - min) / request.splitCount;
             List<Date> dates = IntStream.range(0, request.splitCount)
-                                        .mapToObj(value -> new Date(min + delta * value))
-                                        .collect(Collectors.toList());
+                    .mapToObj(value -> new Date(min + delta * value))
+                    .collect(Collectors.toList());
             List<List<Float>> values = convertValuesToFloat(dates, rawValues);
             chartData.setTimestamp(dates.stream().map(Date::getTime).collect(Collectors.toList()));
             dataset.setData(EvaluateDatesAndValues.aggregate(values, AggregationType.Average));
@@ -213,12 +209,12 @@ public class VariableController {
 
     private List<WorkspaceVariable> getAllVariables(Predicate<String> filter) {
         return context
-            .db()
-            .findAll(WorkspaceVariable.class)
-            .stream()
-            // filter broadcasts variables for 'real' variables
-            .filter(s -> filter.test(s.getWorkspaceGroup().getEntityID()))
-                            .collect(Collectors.toList());
+                .db()
+                .findAll(WorkspaceVariable.class)
+                .stream()
+                // filter broadcasts variables for 'real' variables
+                .filter(s -> filter.test(s.getWorkspaceGroup().getEntityID()))
+                .collect(Collectors.toList());
     }
 
     private Pair<Long, Long> findMinAndMax(List<Object[]> rawValues) {
